Ajustes al modelo
